fix #13 - probleme alignement numéros de page

--- a/citation.css
+++ b/citation.css
@@ -29,7 +29,7 @@
 }
 
 @page citation {
-	@bottom-right-corner {
+	@bottom-right {
   	content: none;
   }
 }
