--- a/main_styles.css
+++ b/main_styles.css
@@ -68,7 +68,7 @@ u{
   /*marks: crop; */
 
   /*numéro de page*/
-  @bottom-right-corner {
+  @bottom-right {
    content: counter(page);
    font-size: 9pt;
    font-weight: bold;
@@ -92,7 +92,7 @@ u{
 
 
 @page:blank{
-	@bottom-right-corner {
+	@bottom-right {
    content: none;
  	}
 
